# arxflix

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml
backend/: config.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  settings.py  types.py
backend/src/: config.py  main.py  models.py  prompts.py  settings.py
backend/src/audio/: audio_1.json  audio_11.json  audio_13.json  audio_15.json  audio_17.json  audio_19.json  audio_21.json  audio_23.json  audio_25.json  audio_27.json  audio_28.json  audio_3.json  audio_5.json  audio_7.json  audio_9.json
backend/src/exporters/: json_exporter.py  markdown_converter.py  mp3_exporter.py  srt_exporter.py  video_processor.py
backend/src/utils/: __init__.py  article_processor.py  audio_generation.py  caption_generation.py  content_timing.py  generate_assets.py  generate_paper.py  generate_script.py  generate_video.py  html_fetcher.py  html_processor.py  link_corrector.py  openai_client.py  script_parser.py  script_parsing.py  script_processor.py  timer.py  url_sanitizer.py
backend/temp/2405.17401v1/: article.md  audio_1.json  audio_11.json  audio_13.json  audio_14.json  audio_16.json  audio_18.json  audio_2.json  audio_20.json  audio_22.json  audio_24.json  audio_26.json  audio_27.json  audio_29.json  audio_30.json  audio_31.json  audio_4.json  audio_6.json  audio_8.json  audio_9.json  output.srt  script.txt
backend/tests/: api_test.py  conftest.py  fixtures.py  generate_assets_test.py  generate_paper_test.py  generate_script_test.py  generate_video_test.py
backend/utils/: generate_assets.py  generate_paper.py  generate_script.py  generate_video.py
frontend/: .prettierrc.yml  components.json  package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.json
frontend/src/app/: clientLogger.ts  errorBoundary.tsx  layout.tsx  logger.ts  page.tsx
frontend/src/app/api/: baseConfig.ts  logger.ts
frontend/src/app/api/generateAssets/: endpointConfig.ts  route.ts
frontend/src/app/api/generatePaper/: endpointConfig.ts  route.ts
frontend/src/app/api/generateScript/: endpointConfig.ts  route.ts
frontend/src/components/: GenerationStepper.tsx  markdown.tsx
frontend/src/components/stepper/: horizontal-step.tsx  step-icon.tsx
frontend/src/remotion/: Root.tsx
frontend/src/remotion/ArxflixComp/: AudioViz.tsx  Main.tsx  Subtitles.tsx  Word.tsx
frontend/src/remotion/ArxflixComp/waveform-path/: polarPath.ts
frontend/src/types/: constants.ts  global.d.ts
notebooks/: pdf2img.ipynb
temp/2405.17401v1/: audio_1.json  audio_10.json  audio_12.json  audio_14.json  audio_16.json  audio_18.json  audio_20.json  audio_22.json  audio_24.json  audio_25.json  audio_4.json  audio_6.json  audio_8.json  output.json  output.srt  script.txt
temp/2407.02489v1/: article.md  audio_1.json  audio_12.json  audio_14.json  audio_17.json  audio_19.json  audio_21.json  audio_23.json  audio_25.json  audio_27.json  audio_29.json  audio_3.json  audio_30.json  audio_5.json  audio_7.json  audio_9.json  output.json  output.srt  script.txt
video_render/: remotion.config.ts
video_render/remotion/: Root.tsx
video_render/remotion/ArxflixComp/: RichContent.tsx  Subtitles.tsx
video_render/remotion/ArxflixComp/waveform-path/: helpers.ts  linearPath.ts  types.ts  waveform-path.ts
video_render/types/: constants.ts
