[tool.poetry]
name = "arxflix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "*"
typer = "*"
fastapi = "*"
elevenlabs = "*"
srt = "*"
openai-whisper = "*"
BeautifulSoup = "*"
markdownify = "*"
soundfile = "*"
torch = "*"
openai = "*"
pandas = "*"
transformers = "*"
parler-tts = {git = "https://github.com/huggingface/parler-tts.git"}

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"

[tool.poetry.scripts]
main = "backend.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
