[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "arxflix"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
BeautifulSoup = "*"
elevenlabs = "*"
fastapi = "*"
markdownify = "*"
openai = "*"
openai-whisper = "*"
pandas = "*"
parler-tts = {git = "https://github.com/huggingface/parler-tts.git"}
python = ">=3.12,<3.13"
python-dotenv = "*"
requests = "*"
soundfile = "*"
srt = "*"
torch = "*"
transformers = "*"
typer = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
types-beautifulsoup4 = "*"
types-pandas = "*"
types-python-dotenv = "*"
types-soundfile = "*"
types-torch = "*"
types-transformers = "*"
types-typer = "*"

[tool.poetry.scripts]
main = "backend.main:main"
