[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "A brief description of your project"
homepage = "https://your-project-homepage.com"
keywords = ["AI", "FastAPI", "NLP", "TTS"]
license = "MIT"
name = "arxflix"
readme = "README.md"
repository = "https://github.com/yourusername/arxflix"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "*"
elevenlabs = "*"
fastapi = "*"
markdownify = "*"
openai = "*"
openai-whisper = "*"
pandas = "*"
parler-tts = {git = "https://github.com/huggingface/parler-tts.git"}
python = ">=3.11,<3.13"
python-dotenv = "*"
requests = "*"
soundfile = "*"
srt = "*"
transformers = "*"
typer = "*"

[tool.poetry.extras]
cpu = ["torch", "torchvision", "torchaudio"]

[tool.poetry.group.dev.dependencies]
flake8 = "*"
flake8-docstrings = "*"
flake8-import-order = "*"
pre-commit = "*"
pytest = "*"
types-beautifulsoup4 = "*"
types-requests = "*"

[tool.poetry.scripts]
main = "backend.main:main"

[tool.poetry.source]
name = "torch_cpu"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"

[tool.pyright]
reportMissingImports = false

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "backend"
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv"
]
indent-width = 4
line-length = 120
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = ["E501"]
select = ["E4", "E7", "E9", "F", "B", "Q"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["E402"]
"__init__.py" = ["E402"]
