[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "arxflix"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
BeautifulSoup = "*"
elevenlabs = "*"
fastapi = "*"
markdownify = "*"
openai = "*"
openai-whisper = "*"
pandas = "*"
parler-tts = {git = "https://github.com/huggingface/parler-tts.git"}
python = ">=3.11,<3.13"
python-dotenv = "*"
requests = "*"
soundfile = "*"
srt = "*"
transformers = "*"
typer = "*"

[tool.poetry.extras]
cpu = ["torch", "torchvision", "torchaudio"]

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
types-beautifulsoup4 = "*"
types-requests = "*"

[tool.poetry.scripts]
main = "backend.main:main"

[tool.poetry.scripts]
main = "backend.main:main"

[tool.poetry.scripts]
main = "backend.main:main"

[tool.poetry.env]
PYTHONPATH = "backend"

[[tool.poetry.source]]
name = "torch_cpu"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "backend"
]
